--- a/template.yaml
+++ b/template.yaml
@@ -12,7 +12,7 @@ Resources:
       CodeUri: src/
       Handler: app.lambda_handler
       Runtime: python3.9
-      Policies: AmazonDynamoDBFullAccess
+      Role: arn:aws:iam::943275084484:role/SignupFunctionRole
       Architectures:
         - x86_64
       Events:
